Added tv guide grid added code for pagination, lazy load is pending

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,5 @@
     <string name="name_desc">Name Descending</string>
     <string name="no_asc">Channel No Ascending</string>
     <string name="no_desc">Channel No Descending</string>
+    <string name="tv_show_s_banner_image">Tv Show\'s Banner Image</string>
 </resources>
