--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="no_asc">Channel No Ascending</string>
     <string name="no_desc">Channel No Descending</string>
     <string name="tv_show_s_banner_image">Tv Show\'s Banner Image</string>
+    <string name="tv_guide">Tv Guide</string>
 </resources>
